exports[`<AppSecret /> should call the click handler when "Get New Secret" is pressed 1`] = `
<div
  className="alert alert-warning">
  <p>
    If you forgot your application secret, you can regenerate the secret below. This process will clear your old secret and require updated to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button">
    Regenerate Application Secret
  </button>
</div>
`;

exports[`<AppSecret /> should not display the secret if not provided 1`] = `
<div
  className="alert alert-warning">
  <p>
    If you forgot your application secret, you can regenerate the secret below. This process will clear your old secret and require updated to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button">
    Regenerate Application Secret
  </button>
</div>
`;

exports[`<AppSecret /> should not display the secret if showSecret is false 1`] = `
<div
  className="alert alert-warning">
  <p>
    If you forgot your application secret, you can regenerate the secret below. This process will clear your old secret and require updated to your apps or scripts.
  </p>
  <button
    className="btn orange"
    onClick={[Function]}
    type="button">
    Regenerate Application Secret
  </button>
  <p>
    <strong>
      Here is your new app secret.
    </strong>
    <br />
    <code>
      a-test-secret
    </code>
  </p>
</div>
`;
